# gcp-doc-ai-showcase

./: .env.template  .gitignore  QUICKSTART.md  README.md  STREAMLIT_DEPLOYMENT.md  app.py  config.py  document_processor.py  gcp_docai_client.py  logging_config.py  pyproject.toml  requirements.txt  simple_annotator.py  ui_components.py
.streamlit/: secrets.toml.template
