[project]
name = "gcp-doc-ai-showcase"
version = "0.1.0"
description = "Interactive Streamlit showcase for GCP Document AI with visual bounding box overlays"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andrey Vykhodtsev" }]
dependencies = [
    "streamlit>=1.28.0",
    "cryptography>=41.0.0",
    "Pillow>=10.0.0",
    "pdf2image>=1.16.3",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "typing-extensions>=4.5.0",
    "pandas>=2.0.0",
]
